test/good/07-by-val-ref.mac
int main() {
    //init to 0
    int a, b;
    add_one(a, b);
    print << a << " " << b << "\n";
    return 0;
}

int add_one(int & a, int b) {
    a = a+1;
    b = b+1;
    return 0;
}