test/bad/10-modzero.mac


int main() {
    int a = 0;
    return 5%a;
}